[gd_scene load_steps=3 format=3 uid="uid://jhyjv6stjlfl"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_uop50"]
[ext_resource type="Script" path="res://scripts/nodes/slideout_margin_container.gd" id="2_3q304"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uop50")

[node name="BottomBar" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -55.0
offset_right = 108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 24
script = ExtResource("2_3q304")
slide_edge = 3
slide_length = 60
slide_duration = 0.2
start_hidden = true
slide_on_start = true

[node name="ButtonPanel" type="PanelContainer" parent="BottomBar"]
layout_mode = 2

[node name="HBC" type="HBoxContainer" parent="BottomBar/ButtonPanel"]
layout_mode = 2

[node name="BTN_Start" type="Button" parent="BottomBar/ButtonPanel/HBC"]
layout_mode = 2
text = "Start Game"

[node name="BTN_Options" type="Button" parent="BottomBar/ButtonPanel/HBC"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="BottomBar/ButtonPanel/HBC"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="BottomBar/ButtonPanel/HBC/BTN_Start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="BottomBar/ButtonPanel/HBC/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="BottomBar/ButtonPanel/HBC/BTN_Quit" to="." method="_on_btn_quit_pressed"]
